--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'theFont';
-  src: url('./assets/theFont.otf') format('opentype');
+  src: url('./theFont.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,7 +30,7 @@ body {
   padding: 60px 20px;
   max-width: 1000px;
   margin: 0 auto;
-  backdrop-filter: blur(1.5px);
+  backdrop-filter: blur(3px);
 }
 
 .site-nav {
@@ -112,7 +112,7 @@ body {
 
 .video-wrapper iframe {
   width: 100%;
-  height: 290px;
+  height: 270px;
   border-radius: 4px;
 }
 
