Add gradient to black on shader background

--- a/style.css
+++ b/style.css
@@ -24,13 +24,31 @@ body {
   font-family: 'theFont', sans-serif;
   line-height: 1.6;
   color: #ffffff;
+  background-color: black;
 }
+
+#content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(#00000000, #000000 50%);
+    z-index: -1;
+    display: block;
+}
+
+canvas#shader-bg {
+    position: absolute;
+}
+
+img.profile-pic {}
 
 .section {
   padding: 60px 20px;
   max-width: 1000px;
   margin: 0 auto;
-  backdrop-filter: blur(3px);
 }
 
 .site-nav {
